[NO-JIRA] explicitly declare toList collector mutable or not